--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
   },
   "repository": {
@@ -14,9 +15,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "2.8.5",
     "express": "4.18.1",
     "helmet": "5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "2.0.0",
     "sqlite3": "5.0.8"
   },
